fix contacts on mobile

--- a/src/app/styles/contacts.module.css
+++ b/src/app/styles/contacts.module.css
@@ -69,18 +69,19 @@
 @media (max-width: 899px) {
   .sec1 {
     min-width: 100%;
-    min-height: 40vh;
+    min-height: 60vh;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
 
-    border: 1px solid black;
+    /* border: 1px solid black; */
   }
   .div2h2 {
     font-size: 13px;
   }
   .circle {
     border-radius: 74%;
+    margin-left: 0.2rem;
     width: 34px;
     height: 34px;
     padding: 10px;
@@ -90,9 +91,17 @@
     text-align: center;
     font: 12px Arial, sans-serif;
   }
+  .contactsh1 {
+    text-align: center;
+    font-size: 25px;
+    font-weight: 900;
+    padding-top: 0.9rem;
+  }
   .sec2 {
     display: flex;
     flex-direction: column;
+    margin-top: 4rem;
+    gap: 2rem;
   }
   .div1sub {
     display: flex;
